# keyrings.passwordstore

./: LICENSE  README.md  setup.cfg
keyrings/passwordstore/: backend.py
