[metadata]
license_file = LICENSE
name = keyrings.passwordstore
version = 0.1.0
author = Steffen Vogel
author_email = post@steffenvogel.de
description = A keyring backend for password-store
long_description = file:README.md
url = https://github.com/stv0g/keyrings.passwordstore
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.entry_points]
keyring.backends =
	passwordstore = keyrings.passwordstore.backend
